# data-validation-pipeline-images

./: Makefile  README.md  pyproject.toml
docker/: Dockerfile
notebooks/: alg_dev.ipynb
