[tool.poetry]
name = "data-validation-pipeline-images"
version = "0.1.0"
description = "Data validation pipeline for images"
authors = ["Marco Paspuel <marco.paspuel@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
